--- a/templates/about.html
+++ b/templates/about.html
@@ -7,9 +7,9 @@
 <meta property="og:image" content="{% static 'images/about/about-hero.webp' %}"/>
 <meta property=”og:image:width” content=”1200″/>
 <meta property=”og:image:height” content=”630″/>
-<meta property="og:description" content="All our projects have 2 things. A commitment to quality work and amazing customer service. No matter what challenges we face."/>
+<meta property="og:description" content="Transform your home with top-quality remodeling & maintenance. Expert craftsmanship in Denver ensures lasting beauty and functionality. Get your free estimate today!"/>
 <meta property="og:type" content="article">
-<meta name="description" content="All our projects have 2 things. A commitment to quality work and amazing customer service. No matter what challenges we face.">
+<meta name="description" content="Transform your home with top-quality remodeling & maintenance. Expert craftsmanship in Denver ensures lasting beauty and functionality. Get your free estimate today!">
 <link rel="canonical" href="https://homerevivellc.net/about">
 <link rel="alternate" href="https://homerevivellc.net/about" hreflang="en"/>
 <!-- Preload Images here -->
@@ -35,10 +35,7 @@ active-link
             About Home Revive
         </h1>
         <p class="description about-hero-description">
-            We bring over 8 years of expertise to every project, whether it’s a full home remodel, a simple improvement, or specialized work like fence and deck repairs or installations. 
-            We take pride in transforming spaces, from interior and exterior painting to flawless flooring and even appliance repair. 
-            Our team is dedicated to quality craftsmanship, ensuring every detail is handled with care and precision. 
-            When it comes to making your home look and feel brand new, Home Revive is the name you can trust.
+            We bring over 8 years of expertise to every project, whether it’s a full home remodel, a simple improvement, or specialized work like fence and deck repairs or installations. We take pride in transforming spaces, from interior and exterior painting to flawless flooring installation and even appliance repair. Our team is dedicated to quality craftsmanship, ensuring every detail is handled with care and precision. When it comes to making your home look and feel brand new, Home Revive is the name you can trust for reliable home renovation services.
         </p>
     </div>
     <div class="about-hero-image background-image" title="Finished Kitchen"></div>
@@ -49,9 +46,7 @@ active-link
             Our Process
         </h2>
         <p class="description">
-            Our process begins with a free consultation where we come to you, listen to your ideas, and help shape your vision right in the space we’ll be working on. 
-            From there, we develop a detailed plan tailored to your needs and budget, keeping you informed every step of the way. Our skilled team then gets to work, using top-quality materials and craftsmanship to bring your project to life. Throughout the process, we’re committed to excellent customer service, ensuring your satisfaction at every phase. 
-            When we hand over the finished product, it’s not just a completed project—it’s your vision, expertly crafted with care and precision.
+            Our process begins with a free consultation where we come to you, listen to your ideas, and help shape your vision right in the space we’ll be working on. From there, we develop a detailed plan tailored to your needs and budget, keeping you informed every step of the way. Our skilled team then gets to work, using top-quality materials and craftsmanship to bring your project to life. Throughout the process, we’re committed to excellent customer service, ensuring your satisfaction at every phase. When we hand over the finished product, it’s not just a completed project—it’s your vision, expertly crafted with care and precision.
         </p>
     </div>
     <div class="process-list">
@@ -62,8 +57,7 @@ active-link
                     On-Site Consultation
                 </h3>
                 <p class="description">
-                    The perfect way to discuss your vision in person and get expert advice tailored to your space. 
-                    We’ll walk through the details together, ensuring we understand your needs and can provide the best solutions for your home project.
+                    The perfect way to discuss your vision in person and get expert advice tailored to your space. We’ll walk through the details together, ensuring we understand your needs and can provide the best solutions for your home improvement project.
                 </p>
             </div>
         </div>
@@ -74,8 +68,7 @@ active-link
                     Design & Estimate
                 </h3>
                 <p class="description">
-                    We focus on understanding your goals and delivering a plan that aligns with your vision and budget. 
-                    Our estimates are crafted with transparency, so you know exactly what to expect from start to finish.
+                    We focus on understanding your goals and delivering a plan that aligns with your vision and budget. Our estimates are crafted with transparency, so you know exactly what to expect from start to finish. No surprises, just a clear path to your dream home.
                 </p>
             </div>
         </div>
@@ -109,24 +102,19 @@ active-link
 </section>
 <section class="guarantee">
     <h2 class="secondary-title guarantee-title">
-        Our Quality Guarantee
+        Our Quality Guarantee & Why It Matters For Your Home
     </h2>
     <p class="description guarantee-description">
-        Our commitment to quality begins with our dedication to using the best materials and proven techniques in every project we undertake. 
-        Whether we’re remodeling a kitchen, installing a new deck, or painting the exterior of your home, we source top-grade materials to ensure durability and a flawless finish. 
-        We believe that the foundation of any great project is the quality of the materials, so we never cut corners, ensuring your home improvements stand the test of time.
+        Our commitment to quality begins with our dedication to using the best materials and proven techniques in every project we undertake. Whether we’re remodeling a kitchen, installing a new deck, or painting the exterior of your home, we source top-grade materials to ensure durability and a flawless finish. We believe that the foundation of any great project is the quality of the materials, so we never cut corners, ensuring your home improvements stand the test of time.
     </p>
     <p class="description guarantee-description">
-        Our team of experienced specialists brings meticulous attention to detail to every phase of your project. 
-        From the initial design and planning stages to the final touches, we work with precision and care to ensure everything is done right. 
-        We follow industry best practices and stay updated on the latest trends and techniques, allowing us to deliver results that not only meet but exceed your expectations. 
-        We understand that quality is in the details, so we take the time to get every aspect just right, ensuring your satisfaction.
+        Our team of experienced specialists brings meticulous attention to detail to every phase of your project. From the initial design and planning stages to the final touches, we work with precision and care to ensure everything is done right. We follow industry best practices and stay updated on the latest trends and techniques, allowing us to deliver results that not only meet but exceed your expectations. We understand that quality is in the details, so we take the time to get every aspect just right, ensuring your satisfaction.
     </p>
     <p class="description guarantee-description">
-        At Home Revive, we’re not just committed to quality in our work; we’re committed to quality in our customer service as well. 
-        We maintain open communication with you throughout the project, providing regular updates and addressing any concerns you might have. 
-        Our goal is to make sure you’re completely satisfied with every step of the process, from the first consultation to the final walkthrough. 
-        We don’t consider the job done until you’re happy with the results because your satisfaction is the ultimate measure of our success.
+        We’re not just committed to quality in our work; we’re committed to quality in our customer service as well. We maintain open communication with you throughout the project, providing regular updates and addressing any concerns you might have. Our goal is to make sure you’re completely satisfied with every step of the process, from the first consultation to the final walkthrough. We don’t consider the job done until you’re happy with the results because your satisfaction is the ultimate measure of our success.
+    </p>
+    <p class="description guarantee-description">
+        Choosing Home Revive means investing in the long-term value and comfort of your home. Our commitment to quality ensures that your remodeling and maintenance projects not only enhance the aesthetic appeal of your living spaces but also improve their functionality and durability. By using top-grade materials and adhering to the highest standards in home renovation, we help you avoid future costly repairs and ensure that every detail of your project is built to last. Whether you’re upgrading your kitchen, renovating your bathroom, or adding a new deck, you can trust that our focus on quality will give you a home that’s not just beautiful but also energy-efficient, safe, and built to withstand the test of time. With Home Revive, quality isn’t just a promise—it’s the foundation of everything we do, ensuring your home remains a source of pride and satisfaction for years to come.
     </p>
 </section>
 {% include 'last-call.html' %}
