--- a/templates/appliance-repair.html
+++ b/templates/appliance-repair.html
@@ -2,22 +2,22 @@
 {% load static %}
 
 {% block seo %} 
-<meta property="og:title" content="Denver Appliance Repair | Colorado | Home Revive"/>
+<meta property="og:title" content="Top Appliance Repair in Denver, CO | Fast & Reliable Service"/>
 <meta property="og:url" content="https://homerevivellc.net/appliance-repair"/>
 <meta property="og:image" content="{% static 'images/services/appliance-repair.webp' %}"/>
 <meta property=”og:image:width” content=”1200″/>
 <meta property=”og:image:height” content=”630″/>
-<meta property="og:description" content="Our seasoned maintenance experts are equipped with years of experience and the latest tools to tackle any issue your household appliances might face."/>
+<meta property="og:description" content="Expert appliance repair in Denver, CO. Fast, reliable service for refrigerators, ovens, washing machines, and dryers. Trust us for quality repairs and peace of mind."/>
 <meta property="og:type" content="article">
-<meta name="description" content="Our seasoned maintenance experts are equipped with years of experience and the latest tools to tackle any issue your household appliances might face.">
+<meta name="description" content="Expert appliance repair in Denver, CO. Fast, reliable service for refrigerators, ovens, washing machines, and dryers. Trust us for quality repairs and peace of mind.">
 <link rel="canonical" href="https://homerevivellc.net/appliance-repair">
 <link rel="alternate" href="https://homerevivellc.net/appliance-repair" hreflang="en"/>
 <!-- Preload Images here -->
- <link rel="preload" href="{% static 'images/services/large/appliance-repair.webp' %}" as="image">
+ <link rel="preload" href="{% static 'images/services/appliance-repair.webp' %}" as="image">
 {% endblock %}
 
 {% block title %}
-Denver Appliance Repair | Colorado | Home Revive
+Top Appliance Repair in Denver, CO | Fast & Reliable Service
 {% endblock %}
 
 {% block main %}
@@ -27,23 +27,29 @@ Denver Appliance Repair | Colorado | Home Revive
             Denver Appliance Repair
         </h1>
         <p class="specific-description description">
-            When it comes to appliance repair, having a skilled technician on your side can make all the difference. At Home Revive, our seasoned maintenance experts are equipped with years of experience and the latest tools to tackle any issue your household appliances might face. From refrigerators and ovens to washing machines and dryers, our team specializes in diagnosing and fixing a wide range of problems efficiently and effectively.
+            When it comes to appliance repair in Denver, CO, having a skilled technician on your side can make all the difference. At Home Revive, our seasoned maintenance experts are equipped with years of experience and the latest tools to tackle any issue your household appliances might face. From refrigerators and ovens to washing machines and dryers, our team specializes in diagnosing and fixing a wide range of problems efficiently and effectively.
         </p>
     </div>
     <div class="specific-image background-image appliance-repair" title="Putting the finishing touches on a gas range repair"></div>
 </section>
 <section class="guarantee specific-overview">
     <h2 class="secondary-title guarantee-title">
-        Appliance Repair Overview
+        Why Choose Us for Appliance Repair in Denver, CO?
     </h2>
     <p class="description guarantee-description">
-        We offer top-notch appliance repair services designed to keep your household running smoothly. With extensive experience and a commitment to excellence, our skilled technicians are adept at handling a variety of common and complex issues. Whether you're dealing with a malfunctioning refrigerator, a problematic oven, or a troublesome washing machine, we provide expert solutions to restore your appliances to optimal performance.
+        We offer top-notch appliance repair services in Denver, CO designed to keep your household running smoothly. With extensive experience and a commitment to excellence, our skilled technicians are adept at handling a variety of common and complex issues. Whether you're dealing with a malfunctioning refrigerator, a problematic oven, or a troublesome washing machine, we provide expert solutions to restore your appliances to optimal performance.
     </p>
     <p class="description guarantee-description">
         Our comprehensive repair services cover all major household appliances. From addressing temperature inconsistencies and noise issues in your refrigerator to fixing heating elements and ignition problems in your oven, we ensure that every repair is executed with precision. Our expertise also extends to washing machine repair and dryer repair, where we tackle problems like leaks, spinning issues, and inadequate drying, ensuring your appliances function efficiently and reliably.
     </p>
     <p class="description guarantee-description">
-        At Home Revive, our focus is on delivering prompt and reliable appliance repair services. We pride ourselves on providing quality repairs that extend the lifespan of your appliances and minimize downtime. Trust our experienced technicians to handle your household appliance maintenance needs with professionalism and care, and enjoy the peace of mind that comes with knowing your appliances are in expert hands.
+        At Home Revive, our focus is on delivering prompt and reliable appliance repair services in Denver. We pride ourselves on providing quality repairs that extend the lifespan of your appliances and minimize downtime. Trust our experienced technicians to handle your household appliance maintenance needs with professionalism and care, and enjoy the peace of mind that comes with knowing your appliances are in expert hands.
+    </p>
+    <p class="description guarantee-description">
+        When you need appliance repair in Denver, CO, choosing the right service can make all the difference. Our expert team at Home Revive is dedicated to providing fast, reliable, and cost-effective solutions for all your household appliance needs. We specialize in refrigerator repair, oven repair, washing machine repair, and dryer repair, using the latest technology and techniques to deliver exceptional results.
+    </p>
+    <p class="description guarantee-description">
+        By opting for our professional repair services, you benefit from our extensive experience and commitment to quality. We diagnose issues accurately and perform repairs that restore your appliances to peak performance, helping you avoid costly replacements. Our focus on customer satisfaction means we handle every job with care and precision, ensuring minimal disruption to your daily routine. Trust Home Revive for your appliance repair needs in Denver, CO, and experience the convenience of having reliable, well-maintained appliances.
     </p>
 </section>
 {% include 'last-call.html' %}
