--- a/templates/deck.html
+++ b/templates/deck.html
@@ -2,22 +2,22 @@
 {% load static %}
 
 {% block seo %} 
-<meta property="og:title" content="Denver Deck Repair & Installation | Home Revive"/>
+<meta property="og:title" content="Expert Deck Repair in Denver, CO | Quality Installation & Repair"/>
 <meta property="og:url" content="https://homerevivellc.net/deck-repair-installation"/>
 <meta property="og:image" content="{% static 'images/services/deck.webp' %}"/>
 <meta property=”og:image:width” content=”1200″/>
 <meta property=”og:image:height” content=”630″/>
-<meta property="og:description" content="Whether you’re looking to build a new deck or restore an existing one, we ensure a durable and stylish result that complements your home."/>
+<meta property="og:description" content="Top deck repair in Denver, CO. Expert repairs and installations for wood, composite, and vinyl decks. Enhance your outdoor space with quality craftsmanship."/>
 <meta property="og:type" content="article">
-<meta name="description" content="Whether you’re looking to build a new deck or restore an existing one, we ensure a durable and stylish result that complements your home.">
+<meta name="description" content="Top deck repair in Denver, CO. Expert repairs and installations for wood, composite, and vinyl decks. Enhance your outdoor space with quality craftsmanship.">
 <link rel="canonical" href="https://homerevivellc.net/deck-repair-installation">
 <link rel="alternate" href="https://homerevivellc.net/deck-repair-installation" hreflang="en"/>
 <!-- Preload Images here -->
-<link rel="preload" href="{% static 'images/services/large/deck.webp' %}" as="image">
+<link rel="preload" href="{% static 'images/services/deck.webp' %}" as="image">
 {% endblock %}
 
 {% block title %}
-Denver Deck Repair & Installation | Home Revive
+Expert Deck Repair in Denver, CO | Quality Installation & Repair
 {% endblock %}
 
 {% block main %}
@@ -27,23 +27,26 @@ Denver Deck Repair & Installation | Home Revive
             Denver Deck Experts
         </h1>
         <p class="specific-description description">
-            Whether you’re looking to build a new deck or restore an existing one, we offer a range of materials including wood, composite, and vinyl, ensuring a durable and stylish result that complements your home. We handle every detail from the initial design and structural framework to the final finishing touches, providing a seamless and high-quality installation that stands up to the elements.
+            Whether you’re looking to build a new deck or need deck repair in Denver, CO, we offer a range of materials including wood, composite, and vinyl, ensuring a durable and stylish result that complements your home. We handle every detail from the initial design and structural framework to the final finishing touches, providing a seamless and high-quality deck installation that stands up to the elements.
         </p>
     </div>
     <div class="specific-image background-image deck" title="Completed deck with a black finish"></div>
 </section>
 <section class="guarantee specific-overview">
     <h2 class="secondary-title guarantee-title">
-        Deck Repair & Installation Overview
+        Why Choose Us for Deck Repair or Installation in Denver, CO?
     </h2>
     <p class="description guarantee-description">
-        When it comes to deck repair and installation, the expertise of a seasoned carpenter can make all the difference in ensuring a sturdy and aesthetically pleasing outdoor space. Decks, whether made of wood or composite materials, are exposed to various elements that can cause wear and tear over time. An experienced carpenter will assess the condition of your deck, identify any structural issues such as rotting wood or unstable supports, and provide precise repairs to restore its strength and safety. Proper maintenance is essential to prolong the life of your deck and enhance its functionality for years to come.
+        When it comes to deck repair and installation in Denver, the expertise of a seasoned carpenter can make all the difference in ensuring a sturdy and aesthetically pleasing outdoor space. Decks, whether made of wood or composite materials, are exposed to various elements that can cause wear and tear over time. An experienced carpenter will assess the condition of your deck, identify any structural issues such as rotting wood or unstable supports, and provide precise repairs to restore its strength and safety. Proper maintenance is essential to prolong the life of your deck and enhance its functionality for years to come.
     </p>
     <p class="description guarantee-description">
-        Deck installation, on the other hand, involves more than just laying down boards. An expert carpenter will consider factors such as the choice of materials, design preferences, and local building codes to ensure your new deck meets all requirements. Whether you’re opting for traditional wood or low-maintenance composite decking, a professional carpenter will handle the installation with meticulous attention to detail, ensuring a level and durable surface. This careful planning and execution help prevent future issues and enhance the overall quality and longevity of your deck.
+        Deck installation in Denver, on the other hand, involves more than just laying down boards. An expert carpenter will consider factors such as the choice of materials, design preferences, and local building codes to ensure your new deck meets all requirements. Whether you’re opting for traditional wood or low-maintenance composite decking, a professional carpenter will handle the installation with meticulous attention to detail, ensuring a level and durable surface. This careful planning and execution help prevent future issues and enhance the overall quality and longevity of your deck.
     </p>
     <p class="description guarantee-description">
-        If you're looking to upgrade or get your deck repaired, investing in professional carpentry services is a smart choice. Not only does it ensure a high standard of workmanship, but it also contributes to the safety and visual appeal of your outdoor space. By choosing an expert carpenter for your deck repair and installation needs, you’re guaranteeing a well-crafted, functional, and beautiful deck that can be enjoyed for years to come.
+        If you're looking to upgrade or get your deck repaired, investing in professional deck repair services is a smart choice. Not only does it ensure a high standard of workmanship, but it also contributes to the safety and visual appeal of your outdoor space. By choosing an expert carpenter for your deck repair and installation needs in Denver, CO, you’re guaranteeing a well-crafted, functional, and beautiful deck that can be enjoyed for years to come.
+    </p>
+    <p class="description guarantee-description">
+        By choosing our professional services, you benefit from a thorough assessment of your deck’s condition, precise repairs that restore strength and safety, and an installation process that adheres to local building codes and design preferences. Our commitment to quality craftsmanship and attention to detail ensures that your deck not only enhances your property’s aesthetic appeal but also stands the test of time. Invest in our expert deck repair and installation services in Denver, CO, and enjoy a well-maintained, stunning deck that you can enjoy for years to come.
     </p>
 </section>
 {% include 'last-call.html' %}
