--- a/templates/exterior-painting.html
+++ b/templates/exterior-painting.html
@@ -2,48 +2,51 @@
 {% load static %}
 
 {% block seo %} 
-<meta property="og:title" content="Exterior Painting | Denver Colorado | Home Revive"/>
+<meta property="og:title" content="Exterior Painting Denver CO | Professional & Weather-Resistant Finishes"/>
 <meta property="og:url" content="https://homerevivellc.net/exterior-painting"/>
 <meta property="og:image" content="{% static 'images/services/exteriors.webp' %}"/>
 <meta property=”og:image:width” content=”1200″/>
 <meta property=”og:image:height” content=”630″/>
-<meta property="og:description" content="With years of experience in Denver, we use high-quality, weather-resistant paints to ensure long-lasting protection against the elements."/>
+<meta property="og:description" content="Revitalize your home's exterior with expert painting services in Denver, CO. Durable, weather-resistant finishes that boost curb appeal and protect your home for years."/>
 <meta property="og:type" content="article">
-<meta name="description" content="With years of experience in Denver, we use high-quality, weather-resistant paints to ensure long-lasting protection against the elements.">
+<meta name="description" content="Revitalize your home's exterior with expert painting services in Denver, CO. Durable, weather-resistant finishes that boost curb appeal and protect your home for years.">
 <link rel="canonical" href="https://homerevivellc.net/exterior-painting">
 <link rel="alternate" href="https://homerevivellc.net/exterior-painting" hreflang="en"/>
 <!-- Preload Images here -->
- <link rel="preload" href="{% static 'images/services/large/exteriors.webp' %}" as="image">
+ <link rel="preload" href="{% static 'images/services/exteriors.webp' %}" as="image">
 {% endblock %}
 
 {% block title %}
-Exterior Painting | Denver Colorado | Home Revive
+Exterior Painting Denver CO | Professional & Weather-Resistant Finishes
 {% endblock %}
 
 {% block main %}
 <section class="specific-hero">
     <div class="specific-info">
         <h1 class="title specific-title">
-            Denver Exterior Painting
+            Denver Exterior Painting Services
         </h1>
         <p class="specific-description description">
-            Our exterior painting service is all about giving your home a fresh look that lasts. With years of experience as professional painters in Denver, we use high-quality, weather-resistant paints to ensure long-lasting protection against the elements. We start with comprehensive surface preparation, including power washing and necessary repairs, to guarantee a smooth, flawless finish. Whether you’re updating your home’s current color or trying something new, we offer custom color consultations to help you choose the perfect shade. Boost your curb appeal with our expert craftsmanship—affordable, reliable, and always top-notch.
+            Our exterior painting service in Denver, CO is all about giving your home a fresh, long-lasting look. With years of experience as professional exterior painters in Denver, we use high-quality, weather-resistant paints to ensure your home is protected from Colorado’s unique climate. We start with comprehensive surface preparation, including power washing and any necessary repairs, to guarantee a smooth, flawless finish. Whether you’re refreshing your home’s current color or trying something new, we offer custom color consultations to help you choose the perfect shade. Boost your curb appeal with our expert craftsmanship—affordable, reliable, and always top-notch.
         </p>
     </div>
     <div class="specific-image background-image exterior-painting" title="Newly painted exterior of a house"></div>
 </section>
 <section class="guarantee specific-overview">
     <h2 class="secondary-title guarantee-title">
-        Exterior Painting Overview
+        Long-Lasting Protection with Denver’s Trusted Exterior Painters
     </h2>
     <p class="description guarantee-description">
-        Designed to not only refresh the look of your home but also provide long-lasting protection against the elements. With years of experience in exterior painting, we understand the importance of using high-quality, weather-resistant paints that stand up to harsh conditions. We specialize in painting various surfaces, including stucco, brick, and siding, ensuring a durable and beautiful finish no matter the material. Our eco-friendly painting options allow you to enhance your home’s curb appeal while being mindful of the environment.
+        Our Denver exterior painting services are designed not only to refresh your home’s appearance but also to provide durable protection against the elements. We specialize in painting a variety of surfaces such as stucco, brick, wood siding, and vinyl, ensuring that your home’s exterior remains vibrant and weatherproof. By using eco-friendly paints and high-quality materials, we help you enhance your home’s energy efficiency while being environmentally conscious.
     </p>
     <p class="description guarantee-description">
-        The process begins with a thorough consultation where we assess your home’s exterior and discuss your goals. We offer expert advice on color selection, including professional exterior trim painting services, to help you choose the perfect shade that complements your home’s architecture and style. Before any paint is applied, we handle all necessary surface preparation, including power washing, sanding, and repairing any damage, ensuring that the paint adheres properly and looks flawless. Whether you have a historic home that requires a delicate touch or a modern property needing a fresh update, our skilled painters deliver top-quality results that enhance your home’s value and aesthetic appeal.
+        The process starts with a thorough consultation to assess your home’s needs. We offer expert color selection advice and professional exterior trim painting, ensuring every detail complements your home’s style. Before any painting begins, we handle all surface preparation, including power washing, sanding, caulking, and repairing damaged areas for optimal paint adhesion. Whether you have a historic home in Denver requiring careful attention or a modern property needing a fresh update, our skilled team delivers top-quality results that improve your home’s value and aesthetic appeal.
     </p>
     <p class="description guarantee-description">
-        We pride ourselves on our fast and efficient exterior painting process, without compromising on quality. We understand that your time is valuable, so we work diligently to complete your project on schedule. Our commitment to excellence is backed by a satisfaction guarantee, meaning we don’t consider the job finished until you’re completely happy with the results. From the initial estimate and consultation to the final brushstroke, our exterior painting service is designed to protect your home and make it look its best for years to come.
+        We pride ourselves on an efficient, detail-oriented painting process that fits your schedule without sacrificing quality. Our commitment to customer satisfaction is backed by a guarantee, meaning we don’t consider the job done until you’re fully satisfied. From the initial estimate to the final brushstroke, our Denver exterior painting services ensure that your home looks its best and remains protected for years to come.
+    </p>
+    <p class="description guarantee-description">
+        At Home Revive, our Denver exterior painting services go beyond aesthetics. We ensure that your home’s exterior is not only visually stunning but also protected against Colorado’s extreme weather conditions. By using premium, weather-resistant paints and thorough surface preparation, we help extend the lifespan of your home’s exterior, reducing the need for frequent maintenance. Our expert team understands the unique challenges of exterior painting in Denver, from harsh UV exposure to freezing winters, and we tailor our approach to deliver the best possible results. With our satisfaction guarantee, you’ll enjoy peace of mind knowing that your investment is safeguarded for years to come. Whether you’re looking to enhance curb appeal, increase property value, or simply protect your home, our skilled painters are here to provide reliable, high-quality service that stands the test of time. Let us help you create a home exterior that reflects your style and withstands the elements.
     </p>
 </section>
 {% include 'last-call.html' %}
