--- a/templates/fence.html
+++ b/templates/fence.html
@@ -2,22 +2,22 @@
 {% load static %}
 
 {% block seo %} 
-<meta property="og:title" content="Denver Fence Repair & Installation | Home Revive"/>
+<meta property="og:title" content="Top Home Fence Repair in Denver, CO | Expert & Reliable Service"/>
 <meta property="og:url" content="https://homerevivellc.net/fence-repair-installation"/>
 <meta property="og:image" content="{% static 'images/services/fence.webp' %}"/>
 <meta property=”og:image:width” content=”1200″/>
 <meta property=”og:image:height” content=”630″/>
-<meta property="og:description" content="Whether you need a custom fence design or repairs to an existing one, we work with a variety of materials to match your needs and style."/>
+<meta property="og:description" content="Expert home fence repair in Denver, CO. We offer durable, high-quality repairs for wood, vinyl, metal, and more. Free estimates & exceptional craftsmanship."/>
 <meta property="og:type" content="website">
-<meta name="description" content="Whether you need a custom fence design or repairs to an existing one, we work with a variety of materials to match your needs and style.">
+<meta name="description" content="Expert home fence repair in Denver, CO. We offer durable, high-quality repairs for wood, vinyl, metal, and more. Free estimates & exceptional craftsmanship.">
 <link rel="canonical" href="https://homerevivellc.net/fence-repair-installation">
 <link rel="alternate" href="https://homerevivellc.net/fence-repair-installation" hreflang="en"/>
 <!-- Preload Images here -->
- <link rel="preload" href="{% static 'images/services/large/fence.webp' %}" as="image">
+ <link rel="preload" href="{% static 'images/services/fence.webp' %}" as="image">
 {% endblock %}
 
 {% block title %}
-Denver Fence Repair & Installation | Home Revive
+Top Home Fence Repair in Denver, CO | Expert & Reliable Service
 {% endblock %}
 
 {% block main %}
@@ -34,16 +34,19 @@ Denver Fence Repair & Installation | Home Revive
 </section>
 <section class="guarantee specific-overview">
     <h2 class="secondary-title guarantee-title">
-        Fence Repair & Installation Overview
+        Why Choose Us for Home Fence Repair in Denver, CO?
     </h2>
     <p class="description guarantee-description">
-        When it comes to repairs, our team excels in diagnosing and fixing issues quickly and effectively. We handle everything from stabilizing leaning posts and replacing damaged panels to reinforcing existing structures. Our approach ensures that your fence not only looks great but also performs reliably over time. We use high-quality materials and proven techniques to restore your fence to its original condition, enhancing its durability and longevity.
+        When it comes to fence repair in Denver, our team excels in diagnosing and fixing issues quickly and effectively. We handle everything from stabilizing leaning posts and replacing damaged panels to reinforcing existing structures. Our approach ensures that your fence not only looks great but also performs reliably over time. We use high-quality materials and proven techniques to restore your fence to its original condition, enhancing its durability and longevity.
     </p>
     <p class="description guarantee-description">
-        This is a great space to write long text about your company and your services. You can use this space to go into a little more detail about your company. Talk about your team and what services you provide. Tell your visitors the story of how you came up with the idea for your business and what makes you different from your competitors. Make your company stand out and show your visitors who you are.
+        Our commitment to quality extends to every aspect of our service, from initial consultation to final inspection. We provide free estimates to give you a clear understanding of the scope and cost of your home fence repair project in Denver, CO before we begin. As licensed and insured professionals, we take pride in delivering exceptional results and maintaining open communication throughout the process. At Home Revive, we’re here to ensure that your fence is not just a boundary but a beautiful and functional part of your property.
     </p>
     <p class="description guarantee-description">
-        Our commitment to quality extends to every aspect of our service, from initial consultation to final inspection. We provide free estimates to give you a clear understanding of the scope and cost of your project before we begin. As licensed and insured professionals, we take pride in delivering exceptional results and maintaining open communication throughout the process. At Home Revive, we’re here to ensure that your fence is not just a boundary but a beautiful and functional part of your property.
+        When it comes to home fence repair in Denver, CO, our priority is to deliver superior results that enhance both the functionality and aesthetics of your property. We understand that a well-maintained fence is crucial for securing your home and boosting its curb appeal. Our team of experienced fence repair experts uses only the highest quality materials and the latest techniques to ensure a durable, long-lasting repair.
+    </p>
+    <p class="description guarantee-description">
+        We offer comprehensive fence repair services, including fixing damaged panels, stabilizing leaning posts, and reinforcing weak spots to prevent future issues. With our free estimates, you get a clear understanding of the costs and scope of your project upfront, so there are no surprises. Our commitment to excellence and customer satisfaction means that we go above and beyond to make sure your fence not only looks great but also performs reliably for years to come. Choose Home Revive for your fence repair needs in Denver, and experience the difference that professional, dedicated service can make.
     </p>
 </section>
 {% include 'last-call.html' %}
