--- a/templates/tile.html
+++ b/templates/tile.html
@@ -2,14 +2,14 @@
 {% load static %}
 
 {% block seo %} 
-<meta property="og:title" content="Denver Tile Installation | Colorado | Home Revive"/>
+<meta property="og:title" content="Expert Tile Installation Denver CO | Quality & Precision"/>
 <meta property="og:url" content="https://homerevivellc.net/tile-installation"/>
 <meta property="og:image" content="{% static 'images/services/tile.webp' %}"/>
 <meta property=”og:image:width” content=”1200″/>
 <meta property=”og:image:height” content=”630″/>
-<meta property="og:description" content="Our team meticulously handles every aspect of the installation process ensuring a flawless finish that stands the test of time."/>
+<meta property="og:description" content="Top tile installation in Denver, CO. Expert services for ceramic, porcelain, natural stone, and glass tiles. Achieve stunning results with precision and quality."/>
 <meta property="og:type" content="article">
-<meta name="description" content="Our team meticulously handles every aspect of the installation process ensuring a flawless finish that stands the test of time.">
+<meta name="description" content="Top tile installation in Denver, CO. Expert services for ceramic, porcelain, natural stone, and glass tiles. Achieve stunning results with precision">
 <link rel="canonical" href="https://homerevivellc.net/tile-installation">
 <link rel="alternate" href="https://homerevivellc.net/tile-installation" hreflang="en"/>
 <!-- Preload Images here -->
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block title %}
-Denver Tile Installation | Colorado | Home Revive
+Expert Tile Installation Denver CO | Quality & Precision
 {% endblock %}
 
 {% block main %}
@@ -27,23 +27,29 @@ Denver Tile Installation | Colorado | Home Revive
             Denver Tile Installation
         </h1>
         <p class="specific-description description">
-            We specialize in a wide range of tile materials, including ceramic, porcelain, natural stone, and glass. Our team meticulously handles every aspect of the installation process, from surface preparation to grout application, ensuring a flawless finish that stands the test of time. Whether you're looking to revamp your kitchen backsplash, upgrade your bathroom flooring, or create a stunning feature wall, we use state-of-the-art tools and techniques to achieve impeccable results.
+            We specialize in tile installation in Denver, CO, handling a wide range of materials, including ceramic, porcelain, natural stone, and glass. Our team meticulously manages every aspect of the tile installation process, from surface preparation to grout application, ensuring a flawless finish that stands the test of time. Whether you're looking to revamp your kitchen backsplash, upgrade your bathroom flooring, or create a stunning feature wall, we use state-of-the-art tools and techniques to achieve impeccable results.
         </p>
     </div>
     <div class="specific-image background-image tile" title="Gray Tile Installation Project"></div>
 </section>
 <section class="guarantee specific-overview">
     <h2 class="secondary-title guarantee-title">
-        Tile Installation Overview
+        Why Choose Us for Tile Installation in Denver, CO?
     </h2>
     <p class="description guarantee-description">
-        At Home Revive, we provide expert tile installation services tailored to meet the unique needs of your home or business. Our seasoned professionals bring over many years of experience in handling a diverse range of tile materials, including ceramic, porcelain, natural stone, and glass. Whether you're looking to refresh your kitchen with a sleek backsplash, enhance your bathroom with elegant flooring, or create a striking feature wall, our team delivers precision and excellence in every project.
+        At Home Revive, we provide expert tile installation services in Denver, CO, tailored to meet the unique needs of your home or business. Our seasoned professionals bring years of experience in handling a diverse range of tile materials, including ceramic, porcelain, natural stone, and glass. Whether you're looking to refresh your kitchen with a sleek backsplash, enhance your bathroom with elegant flooring, or create a striking feature wall, our team delivers precision and excellence in every project.
     </p>
     <p class="description guarantee-description">
         Our tile installation process begins with a thorough site assessment, allowing us to recommend the best tile options and layout designs for your space. We ensure that all surfaces are meticulously prepared, including leveling and cleaning, to create a stable foundation for a flawless installation. Utilizing state-of-the-art tools and techniques, our expert tile installers handle every detail with care, from precise alignment and spacing to achieving a consistent pattern.
     </p>
     <p class="description guarantee-description">
-        To complete the installation, we expertly grout and seal your tiles, protecting them from moisture and wear while ensuring long-lasting durability. Our commitment to quality is evident in our final inspection, where we ensure that every aspect of your tile installation meets our high standards. Trust Home Revive for professional tile installation services that transform your space with beautiful, enduring results. Contact us today to get started!
+        To complete the installation, we expertly grout and seal your tiles, protecting them from moisture and wear while ensuring long-lasting durability. Our commitment to quality is evident in our final inspection, where we ensure that every aspect of your tile installation meets our high standards. Trust Home Revive for professional tile installation services in Denver, CO that transform your space with beautiful, enduring results. Contact us today to get started!
+    </p>
+    <p class="description guarantee-description">
+        When it comes to tile installation in Denver, CO, choosing the right team is crucial for achieving stunning and durable results. At Home Revive, we are dedicated to providing exceptional tile installation services that enhance the beauty and functionality of your space. Our expert team specializes in installing a variety of tile materials, including ceramic, porcelain, natural stone, and glass tiles, ensuring that every project meets your exact specifications.
+    </p>
+    <p class="description guarantee-description">
+        We focus on delivering high-quality tile installation with meticulous attention to detail. From selecting the perfect tile for your design needs to executing a precise and professional installation, we ensure that every step is completed to the highest standards. Our use of advanced tools and techniques guarantees a flawless finish, while our thorough preparation and sealing processes protect your investment and extend the life of your tiles.
     </p>
 </section>
 {% include 'last-call.html' %}
