--- a/templates/wood.html
+++ b/templates/wood.html
@@ -7,9 +7,9 @@
 <meta property="og:image" content="{% static 'images/services/wood.webp' %}"/>
 <meta property=”og:image:width” content=”1200″/>
 <meta property=”og:image:height” content=”630″/>
-<meta property="og:description" content="Our expert installers use only premium materials and equipment to ensure a flawless finish that enhances the beauty and durability of your floors."/>
+<meta property="og:description" content="Top wood floor installation in Denver, CO. Expert installers for oak, maple, and more. Enjoy Precision, quality, and timeless elegance with us!"/>
 <meta property="og:type" content="article">
-<meta name="description" content="Our expert installers use only premium materials and equipment to ensure a flawless finish that enhances the beauty and durability of your floors.">
+<meta name="description" content="Top wood floor installation in Denver, CO. Expert installers for oak, maple, and more. Enjoy Precision, quality, and timeless elegance with us!">
 <link rel="canonical" href="https://homerevivellc.net/wood-flooring-installation">
 <link rel="alternate" href="https://homerevivellc.net/wood-flooring-installation" hreflang="en"/>
 <!-- Preload Images here -->
@@ -17,33 +17,39 @@
 {% endblock %}
 
 {% block title %}
-Denver Wood Flooring Installation | Home Revive
+Wood Flooring Installation Denver CO | Expert Service
 {% endblock %}
 
 {% block main %}
 <section class="specific-hero">
     <div class="specific-info">
         <h1 class="title specific-title">
-            Wood Flooring Specialists
+            Wood Flooring Experts in Denver, CO
         </h1>
         <p class="specific-description description">
-            We offer exceptional wood flooring installation services that blend craftsmanship with precision. Our expert installers use only premium-grade hardwoods and state-of-the-art equipment to ensure a flawless finish that enhances the beauty and durability of your floors. From meticulous subfloor preparation to seamless plank installation and finishing touches, we guarantee a professional and efficient service tailored to your unique style and needs. Transform your space with our exceptional wood flooring solutions and experience the timeless elegance and lasting quality of expertly installed hardwood floors.
+            We offer exceptional wood flooring installation services in Denver, CO that blend craftsmanship with precision. Our expert installers use only premium-grade hardwoods and state-of-the-art equipment to ensure a flawless finish that enhances the beauty and durability of your floors. From meticulous subfloor preparation to seamless plank installation and finishing touches, we guarantee a professional and efficient service tailored to your unique style and needs. Transform your space with our top-tier wood flooring solutions and experience the timeless elegance and lasting quality of expertly installed hardwood floors.
         </p>
     </div>
     <div class="specific-image background-image wood" title="Premium Wood Flooring Installation"></div>
 </section>
 <section class="guarantee specific-overview">
     <h2 class="secondary-title guarantee-title">
-        Wood Flooring Overview
+        Why Choose Us for Wood Flooring Installation in Denver, CO?
     </h2>
     <p class="description guarantee-description">
-        We stand out for our unparalleled quality and attention to detail. With years of experience in the industry, we specialize in delivering premium hardwood flooring solutions that transform any space into a stunning showcase of natural beauty. Our team of expert installers is skilled in working with a variety of wood types, including oak, maple, and walnut, ensuring you receive a customized floor that perfectly complements your home or business.
+        We stand out for our unparalleled quality and attention to detail in wood flooring installation in Denver, CO. With years of experience in the industry, we specialize in delivering premium hardwood flooring solutions that transform any space into a stunning showcase of natural beauty. Our team of expert installers is skilled in working with a variety of wood types, including oak, maple, and walnut, ensuring you receive a customized floor that perfectly complements your home or business.
     </p>
     <p class="description guarantee-description">
         We begin each project with comprehensive preparation, including precise subfloor leveling and moisture control, to ensure a stable foundation for your new wood floors. Our meticulous approach guarantees a smooth, long-lasting installation that enhances both the aesthetics and functionality of your space. We use the latest tools and techniques to ensure every plank is laid with precision, resulting in a seamless and professional finish.
     </p>
     <p class="description guarantee-description">
-        Our commitment to excellence extends beyond the installation process. We provide expert advice on wood selection, finishing options, and maintenance tips to help you make informed decisions and extend the life of your investment. Choose Home Revive for your wood flooring needs and enjoy the timeless elegance and enduring quality that comes with expertly installed hardwood floors. Let us bring your vision to life with our exceptional craftsmanship and dedication to customer satisfaction.
+        Our commitment to excellence extends beyond the installation process. We provide expert advice on wood selection, finishing options, and maintenance tips to help you make informed decisions and extend the life of your investment. Choose Home Revive for your wood flooring installation needs in Denver, CO and enjoy the timeless elegance and enduring quality that comes with expertly installed hardwood floors. Let us bring your vision to life with our exceptional craftsmanship and dedication to customer satisfaction.
+    </p>
+    <p class="description guarantee-description">
+        When it comes to wood flooring installation in Denver, CO, choosing the right professionals can make all the difference. At Home Revive, we are dedicated to delivering high-quality wood flooring that enhances the beauty and functionality of your space. Our team of skilled installers is experienced in handling various types of wood, including oak, maple, and walnut, ensuring a customized solution that meets your design preferences and practical needs.
+    </p>
+    <p class="description guarantee-description">
+        We prioritize precision and durability in every project, using advanced tools and techniques to achieve a flawless installation. Our thorough preparation process, including subfloor leveling and moisture control, guarantees a stable foundation for your new floors, resulting in a smooth and lasting finish. Plus, our expert advice on wood selection and maintenance helps you make informed decisions, ensuring your investment remains beautiful for years to come. Transform your home or business with our expert services and enjoy the timeless elegance and superior quality of our hardwood flooring solutions. Contact us today to get started on creating the perfect wood floors for your space.
     </p>
 </section>
 {% include 'last-call.html' %}
