--- a/templates/last-call.html
+++ b/templates/last-call.html
@@ -1,10 +1,10 @@
 <section class="last-call">
     <h2 class="secondary-title last-call-title">
-        Create your dream home.
+        Create your dream home with Home Revive.
         <br>
         Tell us about your project today.
     </h2>
     <div class="btn-area">
-        <a href="{% url 'contact' %}" class="btn">Get A Free Estimate</a>
+        <a href="{% url 'contact' %}" class="btn">Request a Free Esitmate</a>
     </div>
 </section>
